Color and background color

--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     <p>This is the Simple and normal text.</p>
 
     <button>Click Me</button>
+
+    <h5>This is the footer section</h5>
   </body>
 </html>
