--- a/major_project/index.html
+++ b/major_project/index.html
@@ -66,5 +66,174 @@
         <div class="pannel-deals">Shop deals in Electronics</div>
       </div>
     </header>
+    <div class="hero-section">
+      <div class="hero-message">
+        <p>
+          You are on amazon.com. You can also shop on Amazon India for millions
+          of products with fast local delivery.
+          <a>Click here to go to amazon.in</a>
+        </p>
+      </div>
+    </div>
+
+    <div class="shop-section">
+      <div class="box1 box">
+        <div class="box-content">
+          <h2>Health and Personal care</h2>
+          <div
+            class="box-image"
+            style="
+              background-image: url('https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2025/AIS_99SSD25/Fuji_SingleImageCard_99SSD25_1x._SY304_CB803111905_.jpg');
+            "
+          ></div>
+          <p>See More</p>
+        </div>
+      </div>
+
+      <div class="box2 box">
+        <div class="box-content">
+          <h2>Health and Personal care</h2>
+          <div
+            class="box-image"
+            style="
+              background-image: url('https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2025/AIS_99SSD25/Fuji_SingleImageCard_99SSD25_1x._SY304_CB803111905_.jpg');
+            "
+          ></div>
+          <p>See More</p>
+        </div>
+      </div>
+      <div class="box3 box">
+        <div class="box-content">
+          <h2>Health and Personal care</h2>
+          <div
+            class="box-image"
+            style="
+              background-image: url('https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2025/AIS_99SSD25/Fuji_SingleImageCard_99SSD25_1x._SY304_CB803111905_.jpg');
+            "
+          ></div>
+          <p>See More</p>
+        </div>
+      </div>
+      <div class="box4 box">
+        <div class="box-content">
+          <h2>Health and Personal care</h2>
+          <div
+            class="box-image"
+            style="
+              background-image: url('https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2025/AIS_99SSD25/Fuji_SingleImageCard_99SSD25_1x._SY304_CB803111905_.jpg');
+            "
+          ></div>
+          <p>See More</p>
+        </div>
+      </div>
+      <div class="box1 box">
+        <div class="box-content">
+          <h2>Health and Personal care</h2>
+          <div
+            class="box-image"
+            style="
+              background-image: url('https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2025/AIS_99SSD25/Fuji_SingleImageCard_99SSD25_1x._SY304_CB803111905_.jpg');
+            "
+          ></div>
+          <p>See More</p>
+        </div>
+      </div>
+
+      <div class="box2 box">
+        <div class="box-content">
+          <h2>Health and Personal care</h2>
+          <div
+            class="box-image"
+            style="
+              background-image: url('https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2025/AIS_99SSD25/Fuji_SingleImageCard_99SSD25_1x._SY304_CB803111905_.jpg');
+            "
+          ></div>
+          <p>See More</p>
+        </div>
+      </div>
+      <div class="box3 box">
+        <div class="box-content">
+          <h2>Health and Personal care</h2>
+          <div
+            class="box-image"
+            style="
+              background-image: url('https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2025/AIS_99SSD25/Fuji_SingleImageCard_99SSD25_1x._SY304_CB803111905_.jpg');
+            "
+          ></div>
+          <p>See More</p>
+        </div>
+      </div>
+      <div class="box4 box">
+        <div class="box-content">
+          <h2>Health and Personal care</h2>
+          <div
+            class="box-image"
+            style="
+              background-image: url('https://images-na.ssl-images-amazon.com/images/G/01/AmazonExports/Events/2025/AIS_99SSD25/Fuji_SingleImageCard_99SSD25_1x._SY304_CB803111905_.jpg');
+            "
+          ></div>
+          <p>See More</p>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="foot-panel1">Back to top</div>
+      <div class="foot-panel2">
+        <ul>
+          <p>Get to know us</p>
+          <a>Careers</a>
+          <a>Blog</a>
+          <a>About Amazon</a>
+          <a>Investor Relations</a>
+          <a>Amazon Devices</a>
+          <a>Amazon Science</a>
+        </ul>
+
+        <ul>
+          <p>Get to know us</p>
+          <a>Careers</a>
+          <a>Blog</a>
+          <a>About Amazon</a>
+          <a>Investor Relations</a>
+          <a>Amazon Devices</a>
+          <a>Amazon Science</a>
+        </ul>
+
+        <ul>
+          <p>Get to know us</p>
+          <a>Careers</a>
+          <a>Blog</a>
+          <a>About Amazon</a>
+          <a>Investor Relations</a>
+          <a>Amazon Devices</a>
+          <a>Amazon Science</a>
+        </ul>
+
+        <ul>
+          <p>Get to know us</p>
+          <a>Careers</a>
+          <a>Blog</a>
+          <a>About Amazon</a>
+          <a>Investor Relations</a>
+          <a>Amazon Devices</a>
+          <a>Amazon Science</a>
+        </ul>
+      </div>
+
+      <div class="foot-panel3">
+        <div class="logo"></div>
+      </div>
+
+      <div class="foot-panel4">
+        <div class="pages">
+          <a>Conditions of Use</a>
+          <a>Privacy Notice</a>
+          <a>Your Ads privacy choices</a>
+        </div>
+        <div class="copyright">
+          © 1996-2025, Amazon.com, Inc. or its affiliates
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
